# locus.codes

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  ZAI_DEBUG.md  plan.md
0_references/ai/: Cargo.toml  README.md
0_references/ai/src/: lib.rs
0_references/ai/src/client/: builder.rs  config.rs
0_references/ai/src/providers/: mod.rs
0_references/mcp/proxy/: Cargo.toml
0_references/mcp/proxy/src/client/: mod.rs
0_references/mcp/proxy/src/server/: mod.rs
crates/locus-cli/: Cargo.toml
crates/locus-cli/src/: main.rs
crates/locus-cli/tests/: run_requires_tty.rs
crates/locus-llm/: Cargo.toml
crates/locus-llm/src/: client.rs  lib.rs  openai.rs  parse.rs  prompt.rs  secrets.rs  types.rs
crates/locus-runtime/: Cargo.toml
crates/locus-runtime/src/: lib.rs  orchestrator.rs
crates/locus-ui/: Cargo.toml
crates/locus-ui/src/: detect_term.rs  editor.rs  layout.rs  lib.rs  markdown_renderer.rs  placeholder_prompts.rs  popup.rs  syntax_highlighter.rs  textarea.rs  views.rs  wrapping.rs
crates/locus_cli/: Cargo.toml  README.md
crates/locus_cli/src/: cli.rs  main.rs  output.rs
crates/locus_cli/src/commands/: config.rs  graph.rs  mcp.rs  mod.rs  providers.rs  run.rs  toolbus.rs  tui.rs
crates/locus_core/: Cargo.toml  README.md  plan.md
crates/locus_core/src/: error.rs  event.rs  lib.rs  memory.rs  session.rs  tool_call.rs  turn.rs
crates/locus_core/src/db/: config.rs  connection.rs  layout.rs  migrations.rs  mod.rs  task_list.rs
crates/locus_graph/: Cargo.toml  README.md  plan.md  prompt.md
crates/locus_graph/docs/: actions.md  client_sync.md  constraints.md  context.md  decisions.md  dynamic_tools.md  feedback.md  hierarchy.md  implement_client_methods.md  implementation_plan.md  implicit_links.md  observations.md  outcomes.md  phase1_project_root.md  phase2_tool_anchor.md  phase3_session_anchor.md  phase4_turns.md  runtime_flow.md  skills.md  technical-facts.md  tool-discovery.md  tools.md  validations.md  verify_phases_1_2_3.md
crates/locus_graph/src/: client.rs  config.rs  error.rs  hooks.rs  lib.rs  types.rs
crates/locus_graph/tests/: config_test.rs  hooks.rs  integration.rs
crates/locus_graph/tests/common/: mod.rs
crates/locus_llms/: Cargo.toml  README.md
crates/locus_llms/src/: error.rs  lib.rs
crates/locus_llms/src/provider/: dispatcher.rs  mod.rs
crates/locus_llms/src/providers/: mod.rs
crates/locus_llms/src/providers/zai/: convert.rs  mod.rs  provider.rs  stream.rs  types.rs
crates/locus_llms/src/providers/ziai/: convert.rs  mod.rs  provider.rs  stream.rs  types.rs
crates/locus_llms/src/tests/: mod.rs  provider_registry.rs
crates/locus_llms/src/types/: cache.rs  cache_validator.rs  message.rs  options.rs  request.rs  stream.rs
crates/locus_runtime/: Cargo.toml  plan.md
crates/locus_runtime/src/: config.rs  context.rs  error.rs  lib.rs  memory.rs  runtime.rs  tool_handler.rs
crates/locus_runtime/src/context/: extract.rs  messages.rs  mod.rs  prompt.rs  window.rs
crates/locus_runtime/src/memory/: anchors.rs  bootstrap.rs  graph_map.rs  mod.rs  recall.rs  session.rs  tests.rs  turns.rs  utils.rs
crates/locus_runtime/src/runtime/: agent_loop.rs  llm.rs  mod.rs  tools.rs
crates/locus_runtime/tests/: verify_phases.rs
crates/locus_toolbus/: Cargo.toml  README.md  plan.md
crates/locus_toolbus/src/: history.rs  lib.rs
crates/locus_toolbus/src/acp/: mod.rs
crates/locus_toolbus/src/mcp/: client.rs  config.rs  error.rs  manager.rs  mod.rs  plan.md  protocol.rs  toolbus_integration.rs  transport.rs
crates/locus_toolbus/src/tests/: mod.rs  tool_bus.rs
crates/locus_toolbus/src/tests/tools/: bash.rs  create_file.rs  edit_file.rs  finder.rs  glob.rs  grep.rs  handoff.rs  mod.rs  read.rs  task_list.rs  undo_edit.rs  web_automation.rs
crates/locus_toolbus/src/tools/: mod.rs
crates/locus_toolbus/src/tools/bash/: args.rs  error.rs  executor.rs  mod.rs  schema.json
crates/locus_toolbus/src/tools/create_file/: args.rs  error.rs  mod.rs  schema.json
crates/locus_toolbus/src/tools/edit_file/: args.rs  error.rs  mod.rs  schema.json
crates/locus_toolbus/src/tools/finder/: args.rs  error.rs  mod.rs  schema.json
crates/locus_toolbus/src/tools/glob/: args.rs  error.rs  mod.rs  schema.json
crates/locus_toolbus/src/tools/grep/: args.rs  error.rs  mod.rs  schema.json
crates/locus_toolbus/src/tools/handoff/: args.rs  error.rs  mod.rs  schema.json
crates/locus_toolbus/src/tools/meta/: mod.rs
crates/locus_toolbus/src/tools/read/: args.rs  error.rs  mod.rs  schema.json
crates/locus_toolbus/src/tools/task_list/: args.rs  error.rs  mod.rs  schema.json
crates/locus_toolbus/src/tools/undo_edit/: args.rs  error.rs  mod.rs  schema.json
crates/locus_toolbus/src/tools/web_automation/: args.rs  error.rs  (+4 more)
crates/locus_tui/: Cargo.toml  gap.md  parallel-visual.md  plan.md
crates/locus_tui/docs/: design_plan.md  workstream_1_style_spec.md
crates/locus_tui/src/: diff.rs  lib.rs  preview.rs  run.rs  runtime_events.rs  setup.rs  state.rs  view.rs
crates/locus_tui/src/animation/: mod.rs  shimmer.rs  spinner.rs
crates/locus_tui/src/layouts/: chats.rs  head.rs  input.rs  mod.rs  panel.rs  setup.rs  shortcut.rs  split.rs  style.rs
crates/locus_tui/src/messages/: ai_message.rs  ai_think_message.rs  common.rs  edit_diff.rs  error.rs  markdown.rs  memory.rs  meta_tool.rs  mod.rs  tool.rs  tool_ui_spec.md  user.rs
crates/locus_tui/src/theme/: appearance.rs  mod.rs  palette.rs  rgb.rs
crates/locus_tui/src/utils/: constants.rs  format.rs  layout.rs  mod.rs
crates/locus_tui/src/web_automation/: mod.rs  state.rs  view.rs
crates/locus_ui/: Cargo.toml  plan.md
crates/locus_ui/src/: app_state.rs  lib.rs  main_view.rs  theme.rs
crates/locus_ui/src/animation/: mod.rs  shimmer.rs
crates/locus_ui/src/components/: chat.rs  constants.rs  grid.rs  header.rs  input.rs  layout.rs  loader.rs  message.rs  mod.rs  pixel_font.rs  popup.rs  scroll.rs  shortcuts.rs  spinner.rs
crates/observability/: Cargo.toml  README.md
crates/observability/src/: config.rs  error.rs  lib.rs  telemetry.rs  tracing.rs  tui_log_layer.rs
(+246 files in other folders)
