[workspace]
resolver = "2"
members = [
    "crates/locus-core",
    "crates/locus-cli",
    "crates/locus-ui",
    "crates/locus-runtime",
    "crates/locus-toolbus",
    "crates/locus-agents",
    "crates/locus-llms",
    "crates/locus-graph",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
