[workspace]
resolver = "2"
members = [
    "crates/locus_core",
    "crates/locus_cli",
    "crates/locus_runtime",
    "crates/locus_toolbus",
    "crates/observability",

    "crates/locus_llms",
    "crates/locus_graph",
    "crates/locus_constant",
    "crates/locus_tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
console = "0.15"
comfy-table = "7"
indicatif = "0.17"
