[package]
name = "locus_code_ai"
version.workspace = true
edition = "2024"
authors = ["LocusCode <engineering@locus_code.dev>"]
description = "A provider-agnostic Rust SDK for AI completions with streaming support - Built by LocusCode"
license = "Apache-2.0"
repository = "https://github.com/locus_code/agent"
homepage = "https://locus_code.dev"
documentation = "https://docs.rs/locus_code_ai"
keywords = ["ai", "llm", "openai", "anthropic", "sdk"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[lib]
name = "locus_code_ai"
path = "src/lib.rs"

[features]
default = ["openai"]
openai = []
tracing = ["dep:tracing", "dep:tracing-opentelemetry"]

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"

# HTTP client
reqwest = { workspace = true }
reqwest-eventsource = "0.6"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
bytes = "1"
pin-project = "1"
uuid = { workspace = true }

# Tracing (optional, feature-gated)
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
anyhow = { workspace = true }
