[package]
name = "locus-cli"
version.workspace = true
edition = "2024"
description = "CLI entry point for locus.codes"

[[bin]]
name = "locus"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
locus-toolbus = { path = "../locus_toolbus" }
locus-llms = { path = "../locus_llms" }
locus-constant = { path = "../locus_constant" }
console = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
crossterm = "0.29"
dirs = "6"
