[package]
name = "locus-cli"
version.workspace = true
edition = "2024"
description = "CLI entry point for locus.codes"

[[bin]]
name = "locus"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
locus-toolbus = { path = "../locus_toolbus" }
locus-llms = { path = "../locus_llms" }
locus-constant = { path = "../locus_constant" }
locus-runtime = { path = "../locus_runtime" }
locus-core = { path = "../locus_core" }
locus-tui = { path = "../locus_tui" }
locusgraph-observability = { path = "../observability" }
console = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
crossterm = "0.29"
dirs = "6"
dotenvy = "0.15"
