[package]
name = "locus-graph"
version = "0.1.0"
edition = "2021"
description = "LocusGraph SDK — implicit memory layer for locus.codes"
license = "MIT"

[dependencies]
dirs = "6"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"

locus-proxy = { path = "/Users/nasimakhtar/Projects/hyperbola-network/locusgraph/apps/locus_proxy" }

[dev-dependencies]
dotenvy = "0.15"
