[package]
name = "locus-llms"
version.workspace = true
edition = "2024"
authors = ["LocusCode <engineering@locus.codes>"]
description = "A provider-agnostic Rust SDK for AI completions with streaming support - Built by LocusCodes"
license = "Apache-2.0"
repository = "https://github.com/fnlog0/locus.codes"
keywords = ["ai", "llm", "anthropic", "sdk"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "locus_llms"
path = "src/lib.rs"

[features]
default = []

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"

# HTTP client
reqwest = { workspace = true }
reqwest-eventsource = "0.6"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
bytes = "1"
pin-project = "1"
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
anyhow = { workspace = true }
