[package]
name = "locus-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
locus-core = { path = "../locus_core" }
locus-graph = { path = "../locus_graph" }
locus-toolbus = { path = "../locus_toolbus" }
locus-llms = { path = "../locus_llms" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
async-trait = "0.1"
