[package]
name = "locus-toolbus"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["fs", "io-util", "process", "sync", "time", "rt", "rt-multi-thread", "macros"] }
async-trait = "0.1"
regex = "1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
