[package]
name = "locus-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
locus-core = { path = "../locus-core" }
ratatui = { version = "0.29.0", features = [
    "scrolling-regions",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
crossterm = "0.28"
tokio = { version = "1", features = ["sync"] }
anyhow = "1"
textwrap = "0.16"
unicode-segmentation = "1"
unicode-width = "0.1"
regex = "1.10"
syntect = "5.2"
chrono = "0.4"

[dev-dependencies]
rand = "0.8"
chrono = "0.4"
