[package]
name = "locus-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi-to-tui = "8.0"
locus-constant = { path = "../locus_constant" }
locus-core = { path = "../locus_core" }
ratatui = { version = "0.29.0", features = [
    "scrolling-regions",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
crossterm = "0.28"
ctrlc = "3.4"
tokio = { version = "1", features = ["sync"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
textwrap = "0.16"
unicode-segmentation = "1"
unicode-width = "0.1"
regex = "1.10"
syntect = "5.2"
chrono = "0.4"
dirs = "5.0"

[[bin]]
name = "loader-demo"
path = "src/bin/loader_demo.rs"

[[bin]]
name = "grid-demo"
path = "src/bin/grid_demo.rs"

[[bin]]
name = "layout-demo"
path = "src/bin/layout_demo.rs"

[[bin]]
name = "palette-demo"
path = "src/bin/palette_demo.rs"

[dev-dependencies]
rand = "0.8"
chrono = "0.4"
