[package]
name = "locusgraph-observability"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tracing infrastructure
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }

opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.32.0"

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# For storing tracer provider for shutdown
once_cell = "1.19"