[package]
name = "locus_code-mcp-proxy"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
locus_code-shared = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
